# OS_lab_5_7

./: .gitmodules  CMakeLists.txt
docs/: README.md
src/: ZMQFunctions.h  balanced_tree.h  calculating_node.h  client_program.cpp  server_program.cpp
